fixing the title not showing

--- a/css/Login.css
+++ b/css/Login.css
@@ -12,7 +12,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh; 
 }
 
 .wrapper {
